increased spring boot version to 3.2 and java to 21