@@ -17,26 +17,10 @@ XMC is a small local application to get an overview of your personal finances. T
 | -Djdk.gtk.version    | Use this on linux systems if you have problems with drag&drop.                                                                                                 | 2, 3                                                | -Djdk.gtk.version=2                                                        |
 
 ## Development (IntelliJ IDEA)
-### Run configuration
-To run the application within intellij IDEA you have to download/extract the SDK and specify the following JVM args in the run configuration:  
-``-p "C:\Program Files\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml``  
-This is not neccessary when running the application via command line (for example with java -jar xmc.jar).
-
-### Internal Scene Builder
-To use the internal Scene Builder with Java 11 and ControlsFX do the following:  
-(Problem: "ControlsFX 11.0.0 requires at least Java Version 9")
-1. Download Scene Builder Kit
-2. Go to ``C:\Users\[USER]\AppData\Local\JetBrains\Toolbox\apps\IDEA-U\ch-0\[Version]\plugins\javaFX\lib\rt``
-3. create a directory "java11"
-4. copy the Scene Builder Kit JAR to the new folder and rename to "SceneBuilderKit-11.0.0.jar"
-5. Add the following JVM argument to Intellij IDEA: ``-Djavafx.version=11.0.0``
 
 ### Building application JAR
-Use one of the following commands to build a platform specific jar:  
-``mvn clean install -Djavafx.platform=win``  
-``mvn clean install -Djavafx.platform=linux``  
-``mvn clean install -Djavafx.platform=mac``  
-If no platform is specified, the current OS will be used.
+Use following command to build win, linux and mac JARs:
+``./build.sh``  
 
 ### Update BLZ (Bankleitzahlen) file (blz-data.csv)
 A current and updated file can be downloaded from: https://www.bundesbank.de/de/aufgaben/unbarer-zahlungsverkehr/serviceangebot/bankleitzahlen/download-bankleitzahlen-602592 as a XLSX file. Then you have to remove the unnecessary columns and save it as CSV file in UTF-8 format with ; as separator.
